--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,6 +37,6 @@ jobs:
         env:
           APP_UID: 1000
         run: |
-          docker build -t timothyaxell/authservice:v1 .
-          echo "dckr_pat_sI2nu0DS60eAq9Mb5-tzSZCmAes" | docker login -u timothyaxell --password-stdin
-          docker push timothyaxell/authservice:v1
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/authservice:v1 .
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+          docker push ${{ secrets.DOCKER_USERNAME }}/authservice:v1
