--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,10 +17,10 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.0.x'
+          dotnet-version: '9.0'
 
       - name: Install dependencies
-        run: ./dotnet restore
+        run: dotnet restore
 
       - name: Build
         run: dotnet build --configuration Release
